--- a/RazorPagesMovie/Pages/Test.cshtml
+++ b/RazorPagesMovie/Pages/Test.cshtml
@@ -1,7 +1,23 @@
 ﻿@page
 @model RazorPagesMovie.Pages.TestModel
-@{
-}
 
+@{
+    ViewData["Title"] = "Test";
+
+    <div class="row">
+        <div class="col-lg-1">
+            <form asp-page-handler="edit" method="post">
+                <button class="btn btn-default">Edit</button>
+            </form>
+        </div>
+
+        <div class="col-lg-1">
+            <form asp-page-handler="delete" method="post">
+                <button class="btn btn-default">Delete</button>
+            </form>
+        </div>
+    </div>
+    <h3 class="clearfix">@Model.Message</h3>
+}
 
 Hi from Test page
