--- a/RazorPagesMovie/Pages/Test.cshtml
+++ b/RazorPagesMovie/Pages/Test.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+
 @model RazorPagesMovie.Pages.TestModel
 
 @{
@@ -16,8 +17,15 @@
                 <button class="btn btn-default">Delete</button>
             </form>
         </div>
+
+        <div class="col-lg-1">
+            <form asp-page-handler="view" method="post">
+                <button class="btn btn-default">View</button>
+            </form>
+        </div>
     </div>
     <h3 class="clearfix">@Model.Message</h3>
 }
 
 Hi from Test page
+@* "{handler?}"  action=Test/delete  not in query string, but in route. qs or route*@
