Dependency Injection, clock

--- a/RazorPagesMovie/Pages/Test.cshtml
+++ b/RazorPagesMovie/Pages/Test.cshtml
@@ -21,7 +21,7 @@
         <div class="col-lg-1">
             <form asp-page-handler="view" method="post">
                 <button class="btn btn-default">View</button>
-                <input type="hidden" name="id" value="3"/>
+                <input name="id" value="3"/>
             </form>
         </div>
     </div>
